# Local-_Ai_Handler

./: .env.sample  README.md  docker-compose.yml  test-names.csv
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.jsx  styles.css
